fixed the javascript issue

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <div class="nav-main">
     
             <div class="logo">
-               <a href="index.html"> <h1>Jake&Elwood</h1></a>
+               <a href="index.html" class="nav-link-home"> <h1>Jake&Elwood</h1></a>
             </div>
             
         <button class="bars open-nav"><i class="fas fa-bars"></i></button>
-        <nav class="nav navigation-open">
+        <nav class="nav">
             <button class="close-nav">&times;</button>
             <ul class="nav-list">
-                <li class="nav-item"><a href="index.html" class="current nav-link">home</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link">about us</a></li>
-                <li class="nav-item"><a href="contact.html" class="nav-link">contact</a></li>
+                <li class="nav-item"><a href="index.html" class="current nav-link-home">home</a></li>
+                <li class="nav-item"><a href="about.html" class="nav-link-about">about us</a></li>
+                <li class="nav-item"><a href="contact.html" class="nav-link-contact">contact</a></li>
             </ul>
         </nav>
     </div>
@@ -59,9 +59,9 @@
     <p class="last-footer-item">&copy;Jake&Elwood 2021</p>
 </div>
 <div class="social-media">
-    <i class="fa fa-facebook-official" aria-hidden="true"></i>
-    <i class="fa fa-twitter" aria-hidden="true"></i>   
-    <i class="fa fa-instagram" aria-hidden="true"></i>
+    <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+    <a href="https://twitter.com/?lang=en" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+    <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 </div>
 </footer>
 <script src="js/script.js"></script>
