--- a/about.html
+++ b/about.html
@@ -25,9 +25,9 @@
         <nav class="nav">
             <button class="close-nav">&times;</button>
             <ul class="nav-list">
-                <li class="nav-item"><a href="index.html" class=" nav-link">home</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link current">about us</a></li>
-                <li class="nav-item"><a href="contact.html" class="nav-link">contact</a></li>
+                <li class="nav-item"><a href="index.html" class=" nav-link-home">home</a></li>
+                <li class="nav-item"><a href="about.html" class="nav-link-about current">about us</a></li>
+                <li class="nav-item"><a href="contact.html" class="nav-link-contact">contact</a></li>
             </ul>
         </nav>
     </div>
@@ -71,9 +71,9 @@
     <p class="last-footer-item">&copy;Jake&Elwood 2021</p>
 </div>
 <div class="social-media">
-    <i class="fa fa-facebook-official" aria-hidden="true"></i>
-    <i class="fa fa-twitter" aria-hidden="true"></i>   
-    <i class="fa fa-instagram" aria-hidden="true"></i>
+    <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+    <a href="https://twitter.com/?lang=en" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+    <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 </div>
 </footer>
 <script src="js/script.js"></script>
