fixed mobile response, and footer padding and hero area also

--- a/index.html
+++ b/index.html
@@ -53,16 +53,19 @@
 </section>
 
 <footer>
-<div class="footer-content">
-    <h1>Jake&Elwood</h1>
-    <p>Two brothers from Chicago that are just trying to pay back their debt by helping others with their SEO, SEM, and Content Marketing needs.</p>
-    <p class="last-footer-item">&copy;Jake&Elwood 2021</p>
-</div>
-<div class="social-media">
-    <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-    <a href="https://twitter.com/?lang=en" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-    <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-</div>
+    <div class="footer-wrapper"></div>
+        <div class="footer-content">
+            
+            <h1>Jake&Elwood</h1>
+            <p>Two brothers from Chicago that are just trying to pay back their debt by helping others with their SEO, SEM, and Content Marketing needs.</p>
+            <p class="last-footer-item">&copy;Jake&Elwood 2021</p>
+        </div>
+        <div class="social-media">
+            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+            <a href="https://twitter.com/?lang=en" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        </div>
+    </div>
 </footer>
 <script src="js/script.js"></script>
 </body>
