fixed javascript remove navigation on mobile when clicked, and fixed main content on index area

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <nav class="nav">
             <button class="close-nav">&times;</button>
             <ul class="nav-list">
-                <li class="nav-item"><a href="index.html" class="current nav-link-home">home</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link-about">about us</a></li>
-                <li class="nav-item"><a href="contact.html" class="nav-link-contact">contact</a></li>
+                <li class="nav-item"><a href="index.html" class="current nav-link-home list">home</a></li>
+                <li class="nav-item"><a href="about.html" class="nav-link-about list">about us</a></li>
+                <li class="nav-item"><a href="contact.html" class="nav-link-contact list">contact</a></li>
             </ul>
         </nav>
     </div>
